[project]
name = "processing-textual-osc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.10.0",
    "numpy>=2.4.2",
    "psutil>=7.2.2",
    "pyliblo3>=0.16.4",
    "rich>=14.3.2",
    "textual>=7.5.0",
    "textual-dev>=1.8.0",
]
